tests/neg/specialized-trait-sealed-cross-file/A_1.scala
//> using options -language:experimental.specializedTraits

sealed inline trait Foo[T: Specialized]
inline trait Bar[T: Specialized] extends Foo[T]

def foo(x: Foo[Int]) = x match {
    case y: Bar[Int] => println("ok boomer")
}
